--- a/tex/bib.tex
+++ b/tex/bib.tex
@@ -8,12 +8,15 @@
   $2^{nd}$ edition,
   2008.
 
-\bibitem{bib_torseur}
-  E. Ramis, C. Deschamps et J. Odoux,
-  \emph{Algèbre et applications à la géométrie}.
-  Masson, coll. "Cours de mathématiques spéciales"
-  $2^{edition}$, 1987 (ISBN 2-225-63404-1),
-  chap. 8 ("Les torseurs"), p. 276-294
+\bibitem{bib_featherstoneSite}
+  http://royfeatherstone.org/
+
+%\bibitem{bib_torseur}
+%  E. Ramis, C. Deschamps et J. Odoux,
+%  \emph{Algèbre et applications à la géométrie}.
+%  Masson, coll. "Cours de mathématiques spéciales"
+%  $2^{edition}$, 1987 (ISBN 2-225-63404-1),
+%  chap. 8 ("Les torseurs"), p. 276-294
   
 \bibitem{bib_champVecteurs}
   José-Philippe Pérez,
@@ -38,6 +41,16 @@
 \bibitem{bib_eigen_tutorial_catalogue_sparse}
   Eigen - Solving Sparse Linear Systems
   %http://eigen.tuxfamily.org/dox/group__TopicSparseSystems.html
+
+\bibitem{bib_metaprogramming}
+% C++ Template Metaprogramming
+
+\bibitem{bib_matrixComputation}
+% Matrix Computations (Johns Hopkins Studies in the Mathematical Sciences)
+% by Gene H. Golub (Author), Charles F. Van Loan
+
+
+% => OK
 
 \bibitem{bib_ros}
   ROS - site internet:
@@ -87,11 +100,4 @@
 \bibitem{bib_deepFirstSearch}
 %  \url{http://fr.wikipedia.org/wiki/Algorithme_de_parcours_en_profondeur}
   
-\bibitem{bib_metaprogramming}
-% C++ Template Metaprogramming
-
-\bibitem{bib_matrixComputation}
-% Matrix Computations (Johns Hopkins Studies in the Mathematical Sciences)
-% by Gene H. Golub (Author), Charles F. Van Loan
-
 \end{thebibliography}
