--- a/tex/glossaire.tex
+++ b/tex/glossaire.tex
@@ -8,6 +8,8 @@
 \newacronym{acr_urdf}{URDF}{Universal Robotic Description Format \cite{bib_urdf}}
 \newacronym{acr_sot}{SOT}{Stack Of Tasks}
 \newacronym{acr_algoDFS}{DFS}{Deep First Search}
+\newacronym{acr_cop}{CoP}{centre de pression}
+\newacronym{acr_com}{CoM}{centre de masse}
 
 %% définitions
 
@@ -52,3 +54,5 @@
 \newglossdef{gls_algoDFS}{Deep First Search}{Algorithme parcourant un arbre en profondeur d'abord.}
 
 \newglossdef{gls_sparsite}{sparsité}{une matrice est dite \emph{sparse} si elle est creuse, c'est à dire si elle contient un nombre important de termes nuls. La même notion existe pour une fonction. Une fonction $f$ est dite \emph{sparse} si pour un vecteur de variables $X$, très peu de variables de ce vecteur déterminent le résultat de $f(X)$.}
+
+\newglossdef{gls_cop}{centre de pression}{Position du point où le moment résultant de la force de réaction au sol s'annule \cite{bib_commandeRobotsHumKajita}.}
