--- a/tex/bib.tex
+++ b/tex/bib.tex
@@ -49,7 +49,13 @@
 % Matrix Computations (Johns Hopkins Studies in the Mathematical Sciences)
 % by Gene H. Golub (Author), Charles F. Van Loan
 
-
+\bibitem{bib_commandeRobotsHumKajita}
+  Introduction à la commande des robots humanoïdes
+  
+\bibitem{bib_filtrageTrajectoireCoM}
+  METAPOD - Template M...
+  M. Naveau, J. Carpentier, S. Barthelemy, O. Stasse et P. Soueres
+  
 % => OK
 
 \bibitem{bib_ros}
